# pacfetch

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  default_config.toml  example_config.toml  issues.md  tmp.md
.github/workflows/: ci.yml  release.yml
docs/: testing.md
docs/plans/: 2026-02-03-title-customization-design.md  2026-02-03-title-customization-plan.md
src/: color.rs  config.rs  log.rs  main.rs  pacman.rs  stats.rs  util.rs
src/core/: mod.rs
src/managers/: mod.rs  pacman.rs
src/ui/: ascii.rs  mod.rs
testing/: Dockerfile  README.md  arch-env-test.sh  smoke-test.sh
