[package]
name = "pacfetch"
version = "1.0.0"
edition = "2024"
authors = ["camtisocial thompsonca99@gmail.com"]
license = "GPL-3.0"
description = "a neofectch style wrapper for pacman's Syu/Sy/Su"
repository = "https://github.com/camtisocial/pacfetch"
readme = "README.md"
include = [
    "src/**",
    "default_config.toml",
    "Cargo.toml",
    "README.md",
    "LICENSE*"
]

[dependencies]
alpm = "5"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "5"
expectrl = "0.7"
indicatif = "0.17"
libc = "0.2"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
termimad = "0.34.1"
toml = "0.8"
